# xatlas-rs

./: .gitmodules  Cargo.toml  README.md  build.rs  header.h
examples/: simple.rs
src/: bindings.rs  lib.rs  main.rs  main.rs.orig
