[package]
name = "xatlas-rs"
version = "0.1.3"
authors = ["Jasper-Bekkers <bekkers@gmail.com>"]
edition = "2018"
build = "build.rs"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Jasper-Bekkers/xatlas-rs"
repository = "https://github.com/Jasper-Bekkers/xatlas-rs"
keywords = ["rendering", "uv", "unwrap", "xatlas"]
categories = ["rendering"]
include = [
    "src/*.rs",
    "vendor/xatlas.cpp",
    "vendor/xatlas.h",
    "build.rs",
    "Cargo.toml",
]
documentation = "https://docs.rs/xatlas-rs"
description = "Rust wrapper for the xatlas library"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]

[features]
generate_bindings = []

[build-dependencies]
cc = "1.0.37"

[build-dependencies.bindgen]
version = "0.49.2"
optional = true